--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -1,23 +1,25 @@
 .home {
-  .header {
-    justify-content: center;
+  @media (min-width: 992px) {
+    .header {
+      justify-content: center;
 
-    &__title {
-      font-weight: 100;
-      font-size: 3rem;
+      &__title {
+        font-weight: 100;
+        font-size: 3rem;
+      }
+      &__button {
+        position: absolute;
+        top: 1rem;
+        left: 3rem;
+      }
     }
-    &__button {
-      position: absolute;
-      top: 1rem;
-      left: 3rem;
+    .main-content {
+      margin: 2rem auto;
+      max-width: 80%;
+      display: flex;
+      flex-direction: row;
+      flex-wrap: wrap;
+      justify-content: baseline;
     }
-  }
-  .main-content {
-    margin: 2rem auto;
-    max-width: 80%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: baseline;
   }
 }
