--- a/src/pages/wishlistDetail/WishlistDetail.scss
+++ b/src/pages/wishlistDetail/WishlistDetail.scss
@@ -10,24 +10,28 @@
   .header__description {
     color: #555555;
   }
-  .header__buttons {
-    position: absolute;
-    top: 1rem;
-  }
-  .header__buttons--left {
-    left: 3rem;
-  }
-  .header__buttons--right {
-    right: 3rem;
-  }
   .items-section {
     display: flex;
     justify-content: center;
   }
   .items-list {
-    width: 80%;
     display: flex;
     flex-direction: column;
     justify-content: center;
+  }
+  @media (min-width: 992px) {
+    .header__buttons {
+      position: absolute;
+      top: 1rem;
+    }
+    .header__buttons--left {
+      left: 3rem;
+    }
+    .header__buttons--right {
+      right: 3rem;
+    }
+    .items-list {
+      width: 80%;
+    }
   }
 }
