--- a/src/pages/signUp/SignUp.scss
+++ b/src/pages/signUp/SignUp.scss
@@ -1,34 +1,46 @@
-.wrapper {
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  align-items: center;
-  background-color: #f5f5f5;
-}
-
-.form-sign-up {
-  width: 100%;
-  max-width: 330px;
-  margin: auto;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  .bmd-form-group {
+.signup {
+  &.wrapper {
+    height: calc(100vh - 1.25rem - 37px);
     width: 100%;
-    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #f5f5f5;
+
+    & > * {
+      margin: 0 4rem;
+    }
   }
-  .form-control {
-    position: relative;
-    box-sizing: border-box;
-    height: auto;
-    padding: 10px;
-    font-size: 16px;
+
+  &__img {
+    height: 30vh;
+    max-width: 50vw;
+    opacity: 0.6;
   }
-  .form-control:focus {
-    z-index: 2;
-  }
-  &--error-message-input {
-    padding: 10px;
+
+  .signup-form {
+    width: 100%;
+    max-width: 330px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    .bmd-form-group {
+      width: 100%;
+      padding: 0;
+    }
+    .form-control {
+      position: relative;
+      box-sizing: border-box;
+      height: auto;
+      padding: 10px;
+      font-size: 16px;
+    }
+    .form-control:focus {
+      z-index: 2;
+    }
+    &--error-message-input {
+      padding: 10px;
+    }
   }
 }
